--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
+  scroll-behavior: smooth;
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -6,15 +8,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1.2rem;
-  max-width: 640px;
-  margin: 0 auto;
 }
 
-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-bottom: 1rem;
+.container {
+  max-width: 640px;
+  margin: 0 auto;
 }
 
 .layout {
@@ -29,10 +27,19 @@ header {
   background: linear-gradient(
     0deg,
     rgba(255, 255, 255, 1) 0%,
-    rgba(135, 206, 235, 1) 100%
+    rgba(0, 191, 255, 1) 100%
   );
 }
 
 .layout.night {
   background-color: #2a2a35;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
 }
