--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,3 +1,6 @@
+.header__refresh {
+  cursor: pointer;
+}
 .header__refresh.active img {
   animation: spin 1s linear infinite;
 }
@@ -5,7 +8,7 @@
 .header__search {
   opacity: 0;
   position: absolute;
-  top: 50px;
+  top: 60px;
   background: rgba(255, 255, 255, 0.8);
   border-radius: 5px;
   padding: 10px;
